syntax = "proto3";

package keys;

option go_package = "github.com/cipherchat/backend/pb";

message PreKeyBundle {
  bytes identity_key = 1;
  bytes signed_pre_key = 2;
  bytes signed_pre_key_signature = 3;
  bytes one_time_pre_key = 4; // Optional
  int32 one_time_pre_key_id = 5;
  int32 signed_pre_key_id = 6;
  int32 registration_id = 7;
}

message UploadKeysRequest {
  bytes identity_key = 1;
  bytes signed_pre_key = 2;
  bytes signed_pre_key_signature = 3;
  int32 signed_pre_key_id = 4;
  repeated OneTimePreKey one_time_pre_keys = 5;
  int32 registration_id = 6;
}

message OneTimePreKey {
  int32 key_id = 1;
  bytes key = 2;
}
